# knot

./: .clauderules  .gitignore  .mcp.json  CONTRIBUTING.md  Cargo.toml  KNOT.md  PRIVACY_RULES.json  PROJECT_PLAN.md  README.md  install.ps1  install.sh  plugin.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: sync-manifests.py
src/: hooks.rs  logging.rs  main.rs  utils.rs
src/engine/: graph.rs  lance.rs  memory_ops.rs  mod.rs  skill_ops.rs  types.rs
src/jitv/: mod.rs
src/memory/: mod.rs  node.rs  privacy.rs
src/skills/: mod.rs
src/tools/: mod.rs
